--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
             - backend
 
     mysql:
-        image: mysql:5.7
+        image: mysql:latest
         command: --default-authentication-plugin=mysql_native_password
         restart: always
         environment:
